1. Collection API Улучшения[#247015]