@@ -13,11 +13,13 @@ import static org.junit.Assert.*;
 public class ConvertListTest {
     @Test
     public void whenTwoList() {
-        List<int[]> in = new ArrayList<>();
-        in.add(new int[]{1});
-        in.add(new int[]{2, 3, 4, 5});
-        in.add(new int[]{6, 7, 8, 9});
-        List<Integer> expect = Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8, 9);
+        List<int[]> in = new ArrayList<>(
+                List.of(
+                        new int[]{1},
+                        new int[]{2, 3, 4, 5},
+                        new int[]{6, 7, 8, 9})
+        );
+        List<Integer> expect = List.of(1, 2, 3, 4, 5, 6, 7, 8, 9);
         assertThat(ConvertList.convert(in), is(expect));
     }
 }
